# devopsHomework

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  ansible-playbook-output.txt  code-review.md  feature1.txt  feature2.txt
ansible/: ansible.cfg
ansible/playbooks/: lemp.yml
deploy/ansible/: playbook.yml
deploy/terraform/: main.tf  outputs.tf  variables.tf
infra/: .gitignore
infra/gitlab/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
python-app/: .gitlab-ci.yml  README.md  pyproject.toml
python-app/python_app/: __init__.py  __main__.py
python-app/tests/: test_smoke.py
task10/task1-redis/: Dockerfile  terminal-output.txt
task10/task2-flask-redis/: Dockerfile  app.py  run.sh
task10/task3-time/: Dockerfile  app.py  run.sh
task10/task4-spring-rest/: Dockerfile  pom.xml
task11/: README.md
task11/evidence/: cluster-version.yaml  cni-pods.txt  nginx-pods.txt  nodes.txt  port-forward.txt
task11/manifests/: nginx-replicaset.yaml
task12-loadbalancers/: Dockerfile  README.md  app.py  docker-compose.yml
task13-k8s-troubleshooting/: README.md
task13-k8s-troubleshooting/evidence/: errors.md  pods.txt  port-forward.txt  service.txt  webui.html
task13-k8s-troubleshooting/sample-app/: deployment.yaml  service.yaml
terraform/: backend.tf  inventory.tmpl  local.tf  main.tf  outputs.tf  security.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform-hw3/: .terraform.lock.hcl  OUTPUT.md  backend.tf  main.tf  providers.tf  variables.tf  versions.tf
terraform/ec2/: backend.hcl  (+11 more)
(+34 files in other folders)
